--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "check-password-strength": "^2.0.3",
     "crypto-js": "^4.0.0",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
