--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
-    "check-password-strength": "^2.0.3",
     "crypto-js": "^4.0.0",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
@@ -22,6 +21,7 @@
     "mongoose": "^5.12.5",
     "mongoose-sanitizer-plugin": "^1.1.0",
     "mongoose-unique-validator": "^2.0.3",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "password-validator": "^5.1.1"
   }
 }
